first session ui, adapter and get characters

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WikiHeroes</string>
+    <string name="content_description_item_in_character">item_character_image</string>
 </resources>
