fix search logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
 
     <string name="minus_vector_path">M 5,11 L 11,11 L 11,11 L 13,11 L 13,11 L 19,11 L 19,13 L 13,13 L 13,13 L 11,13 L 11,13 L 5,13 Z</string>
     <string name="plus_vector_path">M 5,11 L 11,11 L 11,5 L 13,5 L 13,11 L 19,11 L 19,13 L 13,13 L 13,19 L 11,19 L 11,13 L 5,13 Z</string>
+    <string name="description_zoom_touch_close">image_zoomed</string>
+
+    <string name="transition_avatar_orig" translatable="false">transition_avatar_orig</string>
+    <string name="transition_avatar_dest" translatable="false">transition_avatar_dest</string>
 </resources>
