develop logic for saving a series

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,10 +27,11 @@
     <string name="transition_avatar_dest" translatable="false">transition_avatar_dest</string>
     <string name="select_what_you_want_to_search">Select what you want to search</string>
     <string name="person">Person</string>
-    <string name="series">Series</string>
     <string name="comic">Comic</string>
     <string name="character">Character</string>
     <string name="search">Search..</string>
     <string name="start_year">Start Year :</string>
     <string name="end_year">End Year :</string>
+    <string name="comics">Comics</string>
+    <string name="series">Series</string>
 </resources>
