--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="end_year">End Year :</string>
     <string name="comics">Comics</string>
     <string name="series">Series</string>
+    <string name="sorry_no_items_found_for_this_creator">Sorry, no items found for this creator</string>
 </resources>
